TOB-5283 Mulighet til å hente ut alle skattekortene
