# src/main/kotlin/no/nav/sokos/skattekort/api/skattekortpersonapi/v1/SkattekortPersonRequest.kt
@@ -6,4 +6,5 @@ import kotlinx.serialization.Serializable
 data class SkattekortPersonRequest(
     val fnr: String,
     val inntektsaar: Short? = null,
+    val hentAlle: Boolean = false,
 )
